<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    android:orientation="vertical"
    tools:context=".Enrollment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/Dark_green"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/hamburger_menu"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/hamburger_menu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:paddingTop="3dp"
            android:text="@string/enrollment"
            android:textAlignment="center"
            android:textColor="#F1F8E9"
            android:textSize="15sp"
            tools:ignore="HardcodedText,TextSizeCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/student_id"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="#F1F8E9"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            tools:ignore="HardcodedText,TextSizeCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:padding="1dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile"
            app:strokeColor="@color/Dark_green"
            app:strokeWidth="1dp" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/enrollment_title"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textColor="#F1F8E9"
        android:textSize="30sp"
        android:textStyle="bold"
        style="@style/Enrollment"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/current"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/notice"
        android:textAlignment="center"
        android:textColor="#FF000D"
        android:textSize="10sp"
        tools:ignore="SmallSp,TextContrastCheck" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fillViewport="true"
                android:contentDescription="@string/horizontal_scroll_view_description">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    android:alpha="0.8"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TableLayout
                            android:id="@+id/enrollment_table"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:stretchColumns="*"
                            tools:ignore="UselessLeaf,UselessParent">

                        </TableLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:text="@string/previous"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fillViewport="true"
                android:contentDescription="@string/horizontal_scroll_view_description">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    android:alpha="0.8"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TableLayout
                            android:id="@+id/enrollment_table_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:stretchColumns="*"
                            tools:ignore="UselessLeaf,UselessParent">

                        </TableLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
