 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    android:orientation="vertical"
    tools:context=".dashboard">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/Dark_green"
         android:layout_gravity="center"
         android:orientation="horizontal"
         android:padding="2dp">

         <ImageView
             android:id="@+id/hamburger_menu"
             android:layout_width="25dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:layout_marginStart="5dp"
             android:contentDescription="@string/app_name"
             android:src="@drawable/hamburger_menu" />

         <TextView
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_weight="1"
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif"
             android:paddingTop="3dp"
             android:text="@string/home"
             android:textAlignment="center"
             android:textColor="#F1F8E9"
             android:textSize="15sp"
             tools:ignore="HardcodedText,TextSizeCheck,VisualLintBounds" />

         <TextView
             android:id="@+id/student_id"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif"
             android:textAlignment="center"
             android:textColor="#F1F8E9"
             android:textSize="15sp"
             android:layout_marginEnd="10dp"
             tools:ignore="HardcodedText,TextSizeCheck" />

         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/profile"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginEnd="5dp"
             android:layout_marginTop="10dp"
             android:padding="1dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/profile"
             app:strokeColor="@color/Dark_green"
             app:strokeWidth="1dp" />

     </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:background="@android:color/transparent"
        app:hintTextColor="@color/black"
        android:textColorHint="@color/black"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/auto_complete_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/dropdown_background"
            android:dropDownWidth="300dp"
            android:dropDownHeight="wrap_content"
            android:hint="@string/select"
            android:inputType="none"
            android:popupBackground="@drawable/dropdown_background"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:hintTextColor="@color/black"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/white"
        android:alpha="0.7"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ndtc_logo"
            android:alpha="0.2"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/dashboard_title"
                android:textAlignment="center"
                android:textColor="@color/Dark_green"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="sans-serif"
                android:justificationMode="inter_word"
                android:text="@string/dashboard_welcome"
                android:textAlignment="center"
                android:textColor="@color/Dark_green"
                android:textSize="19sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,VisualLintLongText" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
