<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_background"
    android:orientation="vertical"
    tools:context=".Profile">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/Dark_green"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:id="@+id/hamburger_menu"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/hamburger_menu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:paddingTop="3dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="#F1F8E9"
            android:textSize="15sp"
            tools:ignore="HardcodedText,TextSizeCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/student_id"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="#F1F8E9"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            tools:ignore="HardcodedText,TextSizeCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:padding="1dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile"
            app:strokeColor="@color/Dark_green"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="1dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile"
            app:strokeWidth="1dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/student_ID_Fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:padding="10dp"
            app:cardElevation="10dp"
            android:textColor="#000000"
            android:background="@drawable/dropdown_background"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:visibility="visible"/>


    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/personal_info"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shadow"
            android:fontFamily="sans-serif"
            android:text="@string/personal_information"
            android:textColor="#CFD8DC"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="HardcodedText,VisualLintButtonSize" />

        <Button
            android:id="@+id/wifi_acc"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15sp"
            android:layout_weight="1"
            android:background="@drawable/button_shadow"
            android:fontFamily="sans-serif"
            android:text="@string/wifi_account"
            android:textColor="#CFD8DC"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="HardcodedText,VisualLintButtonSize">

        </Button>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/contact_info"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_shadow"
            android:fontFamily="sans-serif"
            android:text="@string/contact_information"
            android:textColor="#CFD8DC"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="HardcodedText,VisualLintButtonSize">

        </Button>

        <Button
            android:id="@+id/parents_guardian"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_shadow"
            android:fontFamily="sans-serif"
            android:text="@string/parents_guardian"
            android:textColor="#CFD8DC"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="HardcodedText,VisualLintButtonSize">

        </Button>

    </LinearLayout>
    <TextView
        android:id="@+id/button_info"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#D9D0D0"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fillViewport="true"
                tools:ignore="UselessParent,SpeakableTextPresentCheck">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="8dp"
                    android:alpha="0.8"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <TableLayout
                            android:id="@+id/table_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="25dp"
                            android:layout_marginBottom="10dp"
                            android:stretchColumns="*"
                            tools:ignore="UselessLeaf,UselessParent">

                        </TableLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
