<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Summary_of_Payments">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/Dark_green"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/hamburger_menu"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/hamburger_menu" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:paddingTop="3dp"
                    android:text="@string/summary_of_payments"
                    android:textAlignment="center"
                    android:textColor="#F1F8E9"
                    android:textSize="15sp"
                    tools:ignore="HardcodedText,TextSizeCheck,VisualLintBounds" />

                <TextView
                    android:id="@+id/student_id"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:textAlignment="center"
                    android:textColor="#F1F8E9"
                    android:textSize="15sp"
                    android:layout_marginEnd="10dp"
                    tools:ignore="HardcodedText,TextSizeCheck" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    android:padding="1dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/profile"
                    app:strokeColor="@color/Dark_green"
                    app:strokeWidth="1dp" />

            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dashboard_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/summary_of_payments"
                android:textAlignment="center"
                android:fontFamily="sans-serif"
                android:textColor="#F1F8E9"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:id="@+id/enrollment_text"
                style="@style/Enrollment"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:boxStrokeWidth="0sp"
                app:boxStrokeWidthFocused="0sp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                android:background="@android:color/transparent"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/schoolYearSemesterDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/dropdown_background"
                    android:dropDownWidth="300dp"
                    android:dropDownHeight="wrap_content"
                    android:hint="@string/school_year_semester"
                    android:inputType="none"
                    android:popupBackground="@drawable/dropdown_background"
                    android:textColorHint="@color/black"
                    android:textSize="16sp"
                    app:hintTextColor="@color/black"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fillViewport="true">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        app:cardBackgroundColor="@color/white"
                        android:alpha="0.8"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:elevation="8dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TableLayout
                                android:id="@+id/summary_of_payments_table"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:layout_marginEnd="10dp"
                                android:stretchColumns="*"
                                tools:ignore="UselessLeaf,UselessParent">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Loading..."
                                    android:visibility="gone"
                                    android:layout_gravity="center"
                                    tools:ignore="HardcodedText" />


                            </TableLayout>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </HorizontalScrollView>

            </ScrollView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
